fix(Project): Update application configs

--- a/src/ConceptBed/appsettings.json
+++ b/src/ConceptBed/appsettings.json
@@ -8,17 +8,16 @@
   },
   "OpenApi": {
     "ApplicationName": "Concept Bed",
-    "ClientId": "2366c4fe-ae16-4852-a9bd-bb3cf52bb6fa",
     "Title": "Concept Bed",
     "Description": "The concept bed application boilerplate.",
     "Contact": {
       "Name": "Concept Bed API Team",
-      "Url": "https://github.com/daerhiel/ConceptBed",
+      "Url": "https://github.com/daerhiel/WebAppBoilerplate",
       "Email": ""
     },
     "License": {
       "Name": "MIT",
-      "Url": "https://github.com/daerhiel/ConceptBed/license.txt"
+      "Url": "https://github.com/daerhiel/WebAppBoilerplate/LICENSE"
     }
   },
   "Logging": {
@@ -27,6 +26,5 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
