refactor(Project): Add absolute paths to well known components

--- a/src/ConceptBed/concept-bed-ui/tsconfig.json
+++ b/src/ConceptBed/concept-bed-ui/tsconfig.json
@@ -21,7 +21,18 @@
     "lib": [
       "es2020",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@app/*": [
+        "./src/app/*"
+      ],
+      "@modules/*": [
+        "./src/app/modules/*"
+      ],
+      "@environments/*": [
+        "./src/environments/*"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
