--- a/src/ConceptBed/concept-bed-ui/package.json
+++ b/src/ConceptBed/concept-bed-ui/package.json
@@ -14,37 +14,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.1",
-    "@angular/cdk": "^13.1.1",
-    "@angular/common": "~13.1.1",
-    "@angular/compiler": "~13.1.1",
-    "@angular/core": "~13.1.1",
-    "@angular/forms": "~13.1.1",
-    "@angular/material": "^13.1.1",
-    "@angular/platform-browser": "~13.1.1",
-    "@angular/platform-browser-dynamic": "~13.1.1",
-    "@angular/router": "~13.1.1",
-    "@azure/msal-angular": "^2.3.0",
-    "@azure/msal-browser": "^2.24.0",
-    "@microsoft/applicationinsights-web": "^2.7.2",
-    "rxjs": "~7.4.0",
+    "@angular/animations": "^14.1.3",
+    "@angular/cdk": "^14.1.3",
+    "@angular/common": "^14.1.3",
+    "@angular/compiler": "^14.1.3",
+    "@angular/core": "^14.1.3",
+    "@angular/forms": "^14.1.3",
+    "@angular/material": "^14.1.3",
+    "@angular/platform-browser": "^14.1.3",
+    "@angular/platform-browser-dynamic": "^14.1.3",
+    "@angular/router": "^14.1.3",
+    "@azure/msal-angular": "^2.4.1",
+    "@azure/msal-browser": "^2.28.1",
+    "@microsoft/applicationinsights-web": "^2.8.6",
+    "rxjs": "~7.5.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.2",
-    "@angular/cli": "~13.1.2",
-    "@angular/compiler-cli": "~13.1.1",
-    "@types/jasmine": "~3.10.3",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.10.0",
-    "karma": "~6.3.16",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "run-script-os": "^1.1.6",
-    "typescript": "~4.5.4"
+    "@angular-devkit/build-angular": "^14.1.3",
+    "@angular/cli": "~14.1.3",
+    "@angular/compiler-cli": "^14.1.3",
+    "@types/jasmine": "~4.0.3",
+    "@types/node": "^18.7.8",
+    "jasmine-core": "~4.3.0",
+    "karma": "~6.4.0",
+    "karma-chrome-launcher": "~3.1.1",
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "webpack-bundle-analyzer": "~4.6.0",
+    "run-script-os": "~1.1.6",
+    "typescript": "~4.7.4"
   }
 }
