--- a/src/ConceptBed/concept-bed-ui/package.json
+++ b/src/ConceptBed/concept-bed-ui/package.json
@@ -37,14 +37,16 @@
     "@angular/compiler-cli": "^14.1.3",
     "@types/jasmine": "~4.0.3",
     "@types/node": "^18.7.8",
+    "@types/uuid": "^8.3.4",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "webpack-bundle-analyzer": "~4.6.0",
     "run-script-os": "~1.1.6",
-    "typescript": "~4.7.4"
+    "typescript": "~4.7.4",
+    "uuid": "^9.0.0",
+    "webpack-bundle-analyzer": "~4.6.0"
   }
 }
