refactor(Specs): Move common spec code to separate folder

--- a/src/ConceptBed/concept-bed-ui/tsconfig.json
+++ b/src/ConceptBed/concept-bed-ui/tsconfig.json
@@ -31,6 +31,9 @@
       ],
       "@environments/*": [
         "./src/environments/*"
+      ],
+      "@spec": [
+        "./src/app/spec"
       ]
     }
   },
