--- a/src/ConceptBed/concept-bed-ui/.vscode/launch.json
+++ b/src/ConceptBed/concept-bed-ui/.vscode/launch.json
@@ -4,7 +4,7 @@
   "configurations": [
     {
       "name": "ng serve",
-      "type": "pwa-chrome",
+      "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: start",
       "url": "https://localhost:43443/"
@@ -15,6 +15,39 @@
       "request": "launch",
       "preLaunchTask": "npm: test",
       "url": "http://localhost:9876/debug.html"
+    },
+    {
+      "name": "debug: ng test",
+      "type": "chrome",
+      "request": "attach",
+      "address": "localhost",
+      "restart": true,
+      "port": 9222,
+      "timeout": 600000,
+      "sourceMaps": true,
+      "preLaunchTask": "npm: test",
+      "webRoot": "${workspaceFolder}",
+      "pathMapping": {
+        "/_karma_webpack_": "${workspaceFolder}"
+      }
+    },
+    {
+      "name": "run test file",
+      "type": "node",
+      "request": "launch",
+      "skipFiles": [
+        "<node_internals>/**"
+      ],
+      "console": "integratedTerminal",
+      "program": "${workspaceFolder}/node_modules/.bin/ng",
+      "args": [
+        "test",
+        "--include",
+        "${relativeFile}"
+      ],
+      "outFiles": [
+        "${workspaceFolder}/**/*.js"
+      ]
     }
   ]
 }
