--- a/src/Ubiquity.Framework.Tests/Ubiquity.Framework.Tests.csproj
+++ b/src/Ubiquity.Framework.Tests/Ubiquity.Framework.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -22,6 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Ubiquity.Data.Tests\Ubiquity.Data.Tests.csproj" />
     <ProjectReference Include="..\Ubiquity.Framework\Ubiquity.Framework.csproj" />
   </ItemGroup>
 
