feature(Security): Add permission requirements tests

--- a/src/ConceptBed.Security.Tests/ConceptBed.Security.Tests.csproj
+++ b/src/ConceptBed.Security.Tests/ConceptBed.Security.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -9,8 +9,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.9" />
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
@@ -24,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ConceptBed.Framework\ConceptBed.Framework.csproj" />
+    <ProjectReference Include="..\ConceptBed.Security\ConceptBed.Security.csproj" />
   </ItemGroup>
 
 </Project>
